apps/tdwg2026/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdwg2026
  labels:
    app: tdwg2026
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
      targetPort: 8787
  selector:
    app: tdwg2026
